# static-stac-reader

./: Config.daml  LICENSE  README.md  pyproject.toml
src/: acs_reader.py  read_stac.py  stac_dialog.py  stac_reader.py
