[project]
name = "arcgis-stac"
version = "0.1.0"
description = "ArcGIS Pro extension to browse STAC catalogs and add imagery to maps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pystac>=1.10",
    "pystac-client>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]
